--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "^0.28.1",
-    "@graphprotocol/graph-ts": "^0.26.0"
+    "@graphprotocol/graph-ts": "^0.26.0",
+    "matchstick-as": "^0.4.3"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
