--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "codegen": "graph codegen",
     "build": "graph build",
     "deploy": "graph deploy subgraph-dojo --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
-    "deploy-local": "graph deploy subgraph-dojo --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020"
+    "deploy-local": "graph deploy subgraph-dojo --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020",
+    "test": "graph test Dojo"
   },
   "devDependencies": {
-    "@graphprotocol/graph-cli": "^0.28.1",
+    "@graphprotocol/graph-cli": "^0.29.2",
     "@graphprotocol/graph-ts": "^0.26.0",
     "matchstick-as": "^0.4.3"
   },
